# shrinkcircle

./: Makefile  README.md  pyproject.toml  setup.py
shrinkcircle/: shrinkcircle.py
